--- a/src/main/resources/static/view/popup/idm-user-password-change.html
+++ b/src/main/resources/static/view/popup/idm-user-password-change.html
@@ -26,7 +26,7 @@
                     <p>{{'IDM.USER-MGMT.POPUP.BULK-UPDATE-STATUS-USERS' | translate: getSelectedUsers()}}</p>
                     <ul class="user-list">
                         <li ng-repeat="user in getSelectedUsers()">
-                            <i class="glyphicon glyphicon-user"></i> {{user.fullname}} <span>({{user.type}} - {{user.email}})</span>
+                            <i class="glyphicon glyphicon-user"></i> {{user.first_}} <span>({{user.id_}} - {{user.email_}})</span>
                         </li>
                     </ul>
                 </div>
