--- a/src/main/resources/static/view/idm/user/user.html
+++ b/src/main/resources/static/view/idm/user/user.html
@@ -82,7 +82,7 @@
                             <td class="control"><input type="checkbox" ng-checked="model.selectedUsers[user.id_]"></td>
                             <td>{{user.id_}}</td>
                             <td>{{user.email_}}</td>
-                            <td>{{user.first_}} {{user.last_}}</td>
+                            <td>{{user.first_}}</td>
                         </tr>
                     </table>
                 </div>
